# moltis-b00t

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cliff.toml  fly.toml  install.sh  justfile  render.yaml
.do/: deploy.template.yaml
.github/workflows/: ci.yml  docs.yml  provider-integration.yml
apps/courier/src/: main.rs
crates/agents/: Cargo.toml
crates/agents/src/: docs.rs  lazy_tools.rs  lib.rs  prompt.rs  response_sanitizer.rs  silent_turn.rs  tool_arg_validator.rs  tool_parsing.rs  tool_registry.rs
crates/auth/: Cargo.toml
crates/auth/src/: error.rs  lib.rs  webauthn.rs
crates/browser/: Cargo.toml
crates/browser/src/: container.rs  pool.rs  types.rs
crates/caldav/: Cargo.toml
crates/caldav/src/: client.rs  error.rs  ical.rs  lib.rs  tool.rs
crates/channels/src/: commands.rs
crates/chat/src/: channels.rs  chat_error.rs  lib.rs  memory_tools.rs  prompt.rs  run_with_tools.rs
crates/claude-import/: Cargo.toml
crates/claude-import/src/: detect.rs  lib.rs  memory.rs  skills.rs
crates/cli/: Cargo.toml
crates/cli/src/: cloudflare_tunnel_commands.rs  data_commands.rs  doctor_commands_tests.rs  main.rs  netbird_commands.rs  node_commands.rs  voicecall_commands.rs
crates/code-index/: Cargo.toml
crates/code-index/migrations/: 20260416200000_code_index_init.sql
crates/code-index/src/: backend_qmd.rs  chunker.rs  delta.rs  discover.rs  error.rs  filter.rs  lib.rs  log.rs  search.rs  snapshot_store.rs  store.rs  store_sqlite.rs  types.rs  watcher.rs
crates/codex-import/: Cargo.toml
crates/codex-import/src/: detect.rs  lib.rs  mcp_servers.rs  memory.rs
crates/common/src/: hooks.rs
crates/config/: Cargo.toml
crates/config/src/: agent_defs.rs  container_mounts.rs  env_subst.rs  lib.rs  schema.rs  template.rs  validate.rs
crates/discord/src/: access.rs  config.rs
crates/external-agents/: Cargo.toml
crates/external-agents/src/: bridge.rs  error.rs  lib.rs  registry.rs  transport.rs  types.rs
crates/gateway/: Cargo.toml
crates/gateway/migrations/: 20260428100000_voice_personas.sql  20260428110000_agents_voice_persona.sql  20260507120000_node_ed25519_identity.sql
crates/gateway/src/: agent_persona.rs  approval.rs  broadcast.rs  channel_store.rs  chat.rs  external_agents.rs  lib.rs  netbird.rs  node_exec.rs  pairing.rs  services.rs  state.rs  voice_agent_tools.rs  voice_persona.rs  webhooks.rs
crates/gateway/src/channel_events/: dispatch.rs  tests.rs
crates/gateway/src/channel_events/commands/: attachments.rs  quick_actions.rs
crates/gateway/src/methods/: channel_mux.rs  dispatch.rs  gateway.rs  mod.rs  node.rs  pairing.rs  phone.rs  services.rs  subscribe.rs  voice.rs
crates/gateway/src/methods/services/: admin.rs  agents.rs  channels.rs  modes.rs  voice_personas.rs  voicecall.rs
crates/gateway/src/server/: helpers.rs  hooks.rs  init_channels.rs  location.rs  mod.rs  prepare_core.rs  prepared.rs  startup.rs
crates/gateway/src/server/prepare_core/: tool_registration.rs
crates/gateway/src/server/prepare_core/post_state/: credential_env.rs
crates/gateway/src/server/tests_legacy/: hooks.rs  webauthn.rs  workspace.rs
crates/gateway/src/services/: browser.rs  gateway.rs
crates/gateway/src/services/skills/: service.rs  skills_helpers.rs
crates/gateway/src/session/: helpers.rs  maintenance.rs  service.rs  summary.rs
crates/gateway/src/voice/: mod.rs  stt_service.rs  tts_service.rs
crates/hermes-import/: Cargo.toml
crates/hermes-import/src/: detect.rs  lib.rs  skills.rs
crates/httpd/: Cargo.toml
crates/httpd/src/: auth_middleware.rs  cloudflare_tunnel_routes.rs  data_routes.rs  error.rs  graphql_routes.rs  lib.rs  netbird_routes.rs  ngrok_routes.rs  ssh_routes.rs  tailscale_routes.rs  ws.rs
crates/httpd/src/server/: builder.rs  cloudflare_tunnel.rs  gateway.rs  handlers.rs  mod.rs  netbird.rs  ngrok.rs  types.rs
crates/httpd/tests/: auth_middleware.rs  graphql_chat_binding.rs
crates/import-core/: Cargo.toml
crates/import-core/src/: lib.rs  report.rs  skills.rs
crates/matrix/: Cargo.toml
crates/matrix/src/: client.rs  lib.rs  plugin.rs  state.rs
crates/memory/: Cargo.toml
crates/memory/src/: chunker.rs  embeddings.rs  embeddings_batch.rs  embeddings_fallback.rs  embeddings_local.rs  embeddings_openai.rs  error.rs  lib.rs  manager.rs  reranking.rs  runtime.rs  schema.rs  search.rs  session_export.rs  store.rs  store_b00t.rs  store_sqlite.rs  tools.rs  writer.rs  writer_b00t.rs
crates/netbird/: Cargo.toml
crates/netbird/src/: lib.rs  manager.rs
crates/node-host/: Cargo.toml
crates/node-host/src/: identity.rs  lib.rs  runner.rs  service.rs
crates/portable/: Cargo.toml
crates/portable/src/: export.rs
crates/qmd/: Cargo.toml
crates/splitter/: Cargo.toml
crates/splitter/src/: lib.rs
crates/telephony/: Cargo.toml
crates/telephony/src/: audio.rs  config.rs  error.rs  lib.rs  manager.rs  outbound.rs  plugin.rs  provider.rs  tool.rs  types.rs  webhook.rs
crates/telephony/src/providers/: mock.rs  mod.rs  plivo.rs  telnyx.rs  twilio.rs
crates/tools/: Cargo.toml
crates/voice/: Cargo.toml
crates/web/: Cargo.toml
deploy/: README.md  docker-compose.yml  moltis.service
docs/: .mdbook-lint.toml  README.md  astro.config.mjs  channel-integration-checklist.md  package-lock.json  package.json
docs/src/: SUMMARY.md  agent-presets.md  cloud-deploy.md  comparison.md  configuration-reference.md  configuration.md  deploy-vps.md  discord.md  e2e-testing.md  external-agents.md  hooks.md  matrix.md  mcp.md  modes.md  nodes.md  quickstart.md  remote-access.md  security.md  skill-tools.md  voice.md
docs/src/lib/: docs.ts  (+1 more)
plans/: 2026-04-20-plan-self-improving-agent-loop.md
presentations/20260604/: slides.md
scripts/: build-swift-bridge.sh  check-install-package-names.sh  download-tailwindcss-cli.sh  generate-ios-graphql.sh  gpg-sign-release.sh  i18n-check.sh  local-validate.sh  prepare-release.sh
website/: _worker.js  index.en.html  install.sh  package.json  releases.json
website/changelog/: index.html
website/scripts/: build-changelog.mjs  build-i18n.mjs  dev-server.mjs
(+264 files in other folders)
