[package]
description       = "Import data from Claude Code and Claude Desktop into Moltis"
edition.workspace = true
license.workspace = true
name              = "moltis-claude-import"
version.workspace = true

[dependencies]
dirs-next          = { workspace = true }
moltis-import-core = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
