[package]
description       = "Codebase indexing for moltis — git-tracked file discovery, filtering, chunking, and project-scoped search"
edition.workspace = true
name              = "moltis-code-index"
version.workspace = true

[features]
default = ["builtin", "tracing"]
qmd = ["dep:moltis-qmd", "dep:moltis-agents"]
builtin = ["dep:moltis-memory", "dep:moltis-agents", "dep:sqlx", "dep:tokio"]
file-watcher = ["dep:notify-debouncer-full", "dep:tokio", "dep:tokio-util"]
tracing = ["dep:tracing"]
metrics = ["dep:metrics"]

[dependencies]
anyhow           = { workspace = true }
async-trait      = { workspace = true }
gix              = { workspace = true }
moltis-agents    = { optional = true, workspace = true }
moltis-memory    = { optional = true, workspace = true }
moltis-qmd       = { optional = true, workspace = true }
moltis-config    = { workspace = true }
moltis-splitter  = { workspace = true }
moltis-tools     = { workspace = true }
notify-debouncer-full = { optional = true, workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
sha2             = { workspace = true }
sqlx             = { optional = true, workspace = true }
tempfile         = { workspace = true }
thiserror        = { workspace = true }
time             = { workspace = true }
tokio            = { workspace = true, features = ["sync"], optional = true }
tokio-util       = { workspace = true, optional = true }
tracing          = { workspace = true, optional = true }
metrics          = { workspace = true, optional = true }


[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
