[package]
edition.workspace    = true
name                 = "moltis-gateway"
repository.workspace = true
version.workspace    = true

[dependencies]
anyhow                  = { workspace = true }
async-trait             = { workspace = true }
base64                  = { workspace = true }
bytes                   = { workspace = true }
chrono                  = { features = ["serde"], optional = true, workspace = true }
chrono-tz               = { workspace = true }
dashmap                 = { workspace = true }
ed25519-dalek           = { workspace = true }
flate2                  = { workspace = true }
futures                 = { workspace = true }
gix                     = { workspace = true }
hostname                = { workspace = true }
http                    = { workspace = true }
include_dir             = { optional = true, workspace = true }
mdns-sd                 = { optional = true, workspace = true }
moltis-agents           = { workspace = true }
moltis-auth             = { workspace = true }
moltis-browser          = { workspace = true }
moltis-caldav           = { optional = true, workspace = true }
moltis-canvas           = { workspace = true }
moltis-channels         = { workspace = true }
moltis-chat             = { workspace = true }
moltis-claude-import    = { optional = true, workspace = true }
moltis-code-index       = { workspace = true }
moltis-codex-import     = { optional = true, workspace = true }
moltis-common           = { workspace = true }
moltis-config           = { workspace = true }
moltis-cron             = { workspace = true }
moltis-discord          = { optional = true, workspace = true }
moltis-external-agents  = { workspace = true }
moltis-hermes-import    = { optional = true, workspace = true }
moltis-home-assistant   = { optional = true, workspace = true }
moltis-matrix           = { optional = true, workspace = true }
moltis-mcp              = { workspace = true }
moltis-mcp-agent-bridge = { workspace = true }
moltis-media            = { workspace = true }
moltis-memory           = { workspace = true }
moltis-metrics          = { optional = true, workspace = true }
moltis-msteams          = { optional = true, workspace = true }
moltis-netbird          = { optional = true, workspace = true }
moltis-network-filter   = { features = ["proxy", "service"], optional = true, workspace = true }
moltis-nostr            = { optional = true, workspace = true }
moltis-oauth            = { workspace = true }
moltis-onboarding       = { workspace = true }
moltis-openclaw-import  = { optional = true, workspace = true }
moltis-plugins          = { workspace = true }
moltis-projects         = { workspace = true }
moltis-protocol         = { workspace = true }
moltis-provider-setup   = { workspace = true }
moltis-providers        = { workspace = true }
moltis-qmd              = { optional = true, workspace = true }
moltis-routing          = { workspace = true }
moltis-secret-store     = { workspace = true }
moltis-service-traits   = { workspace = true }
moltis-sessions         = { workspace = true }
moltis-signal           = { optional = true, workspace = true }
moltis-skills           = { workspace = true }
moltis-slack            = { optional = true, workspace = true }
moltis-tailscale        = { optional = true, workspace = true }
moltis-telegram         = { optional = true, workspace = true }
moltis-telephony        = { optional = true, workspace = true }
moltis-tools            = { workspace = true }
moltis-vault            = { optional = true, workspace = true }
moltis-voice            = { optional = true, workspace = true }
moltis-webhooks         = { workspace = true }
moltis-whatsapp         = { optional = true, workspace = true }
p256                    = { features = ["ecdsa"], optional = true, workspace = true }
portable-pty            = { optional = true, workspace = true }
pulldown-cmark          = { features = ["html"], workspace = true }
qrcode                  = { optional = true, workspace = true }
rand                    = { workspace = true }
reqwest                 = { workspace = true }
secrecy                 = { workspace = true }
serde                   = { workspace = true }
serde_json              = { workspace = true }
sha2                    = { workspace = true }
sqlx                    = { workspace = true }
sysinfo                 = { workspace = true }
tar                     = { workspace = true }
tempfile                = { workspace = true }
thiserror               = { workspace = true }
time                    = { workspace = true }
tokio                   = { workspace = true }
tokio-stream            = { workspace = true }
tokio-util              = { workspace = true }
toml                    = { workspace = true }
tracing                 = { workspace = true }
tracing-subscriber      = { workspace = true }
url                     = { workspace = true }
urlencoding             = { workspace = true }
uuid                    = { workspace = true }
web-push                = { optional = true, workspace = true }
webauthn-rs             = { features = ["danger-allow-state-serialisation"], workspace = true }
which                   = { optional = true, workspace = true }

[features]
agent = []
bundled-skills = [
  "moltis-chat/bundled-skills",
  "moltis-skills/bundled-skills",
  "moltis-tools/bundled-skills",
]
caldav = ["dep:moltis-caldav"]
claude-import = ["dep:moltis-claude-import"]
code-index-builtin = ["moltis-code-index/builtin"]
codex-import = ["dep:moltis-codex-import"]
default = [
  "agent",
  "bundled-skills",
  "caldav",
  "claude-import",
  "code-index-builtin",
  "codex-import",
  "discord",
  "file-watcher",
  "firecrawl",
  "fs-tools",
  "graphql",
  "hermes-import",
  "home-assistant",
  "local-llm",
  "local-llm-metal",
  "matrix",
  "mdns",
  "metrics",
  "msteams",
  "netbird",
  "nostr",
  "openclaw-import",
  "prometheus",
  "provider-openai-codex",
  "push-notifications",
  "qmd",
  "signal",
  "slack",
  "tailscale",
  "telegram",
  "telephony",
  "tls",
  "trusted-network",
  "vault",
  "voice",
  "wasm",
  "web-ui",
  "whatsapp",
]
discord = ["dep:moltis-discord"]
file-watcher = [
  "moltis-code-index/file-watcher",
  "moltis-memory/file-watcher",
  "moltis-openclaw-import?/file-watcher",
  "moltis-skills/file-watcher",
]
firecrawl = ["moltis-tools/firecrawl"]
fs-tools = ["moltis-tools/fs-tools"]
graphql = []
hermes-import = ["dep:moltis-hermes-import"]
home-assistant = ["dep:moltis-home-assistant"]
llm-compaction = ["moltis-chat/llm-compaction"]
local-embeddings = ["moltis-memory/local-embeddings"]
local-llm = [
  "moltis-chat/local-llm",
  "moltis-provider-setup/local-llm",
  "moltis-providers/local-llm",
]
local-llm-cuda = ["local-llm", "moltis-providers/local-llm-cuda"]
local-llm-metal = ["local-llm", "moltis-providers/local-llm-metal"]
local-llm-vulkan = ["local-llm", "moltis-providers/local-llm-vulkan"]
matrix = ["dep:moltis-matrix"]
mdns = ["dep:mdns-sd"]
metrics = [
  "dep:moltis-metrics",
  "moltis-chat/metrics",
  "moltis-discord?/metrics",
  "moltis-matrix/metrics",
  "moltis-metrics/sqlite",
  "moltis-msteams?/metrics",
  "moltis-nostr?/metrics",
  "moltis-signal?/metrics",
]
msteams = ["dep:moltis-msteams"]
netbird = ["dep:moltis-netbird"]
nostr = ["dep:moltis-nostr"]
openclaw-import = ["dep:moltis-openclaw-import"]
prometheus = ["metrics", "moltis-metrics/prometheus"]
provider-openai-codex = [
  "moltis-providers/provider-openai-codex",
  "moltis-tools/provider-openai-codex",
]
push-notifications = ["dep:chrono", "dep:p256", "dep:web-push", "moltis-chat/push-notifications"]
qmd = ["dep:moltis-qmd", "moltis-code-index/qmd"]
signal = ["dep:moltis-signal"]
slack = ["dep:moltis-slack", "moltis-slack/metrics"]
tailscale = ["dep:moltis-tailscale"]
telegram = ["dep:moltis-telegram", "moltis-chat/telegram"]
telephony = ["dep:moltis-telephony"]
tls = []
trusted-network = ["dep:moltis-network-filter"]
vault = [
  "dep:moltis-vault",
  "moltis-auth/vault",
  "moltis-provider-setup/vault",
  "moltis-secret-store/vault",
]
voice = ["dep:moltis-voice"]
wasm = ["moltis-tools/wasm"]
web-ui = ["dep:include_dir", "dep:portable-pty", "dep:which", "moltis-chat/web-ui"]
whatsapp = ["dep:moltis-whatsapp", "dep:qrcode", "moltis-whatsapp/metrics"]

[dev-dependencies]
serial_test = { workspace = true }

[lints]
workspace = true
