[package]
edition.workspace = true
name              = "moltis-memory"
version.workspace = true

[features]
default = ["file-watcher"]
# Re-export code-splitter features from moltis-splitter for downstream compatibility.
code-splitter      = ["moltis-splitter/code-splitter"]
code-splitter-base = ["moltis-splitter/code-splitter-base"]
lang-bash          = ["moltis-splitter/lang-bash"]
lang-c             = ["moltis-splitter/lang-c"]
lang-cpp           = ["moltis-splitter/lang-cpp"]
lang-css           = ["moltis-splitter/lang-css"]
lang-go            = ["moltis-splitter/lang-go"]
lang-html          = ["moltis-splitter/lang-html"]
lang-java          = ["moltis-splitter/lang-java"]
lang-javascript    = ["moltis-splitter/lang-javascript"]
lang-json          = ["moltis-splitter/lang-json"]
lang-markdown      = ["moltis-splitter/lang-markdown"]
lang-python        = ["moltis-splitter/lang-python"]
lang-ruby          = ["moltis-splitter/lang-ruby"]
lang-rust          = ["moltis-splitter/lang-rust"]
lang-toml          = ["moltis-splitter/lang-toml"]
lang-typescript    = ["moltis-splitter/lang-typescript"]
# Existing features.
file-watcher     = ["dep:notify-debouncer-full"]
local-embeddings = ["dep:llama-cpp-2"]
metrics          = ["dep:moltis-metrics"]

[dependencies]
anyhow                 = { workspace = true }
async-trait            = { workspace = true }
base64                 = { workspace = true }
bytemuck               = { workspace = true }
chrono                 = { features = ["serde"], workspace = true }
directories.workspace  = true
futures                = { workspace = true }
llama-cpp-2            = { optional = true, workspace = true }
moltis-agents          = { workspace = true }
moltis-common          = { workspace = true }
moltis-metrics         = { optional = true, workspace = true }
moltis-splitter        = { workspace = true }
moltis-tools           = { workspace = true }
notify-debouncer-full  = { optional = true, workspace = true }
reqwest                = { workspace = true }
secrecy                = { workspace = true }
serde                  = { workspace = true }
serde_json             = { workspace = true }
thiserror              = { workspace = true }
sha2                   = { workspace = true }
sqlx                   = { workspace = true }
tokio                  = { workspace = true }
tracing                = { workspace = true }
walkdir                = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
