[package]
edition.workspace    = true
name                 = "moltis-netbird"
repository.workspace = true
version.workspace    = true

[dependencies]
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }

[lints]
workspace = true
